--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-    <title>header header</title>
+    <title>CS476A, Fall 2021</title>
     <link type="text/css" rel="stylesheet" href="assets/css/github-markdown.css">
     <link type="text/css" rel="stylesheet" href="assets/css/pilcrow.css">
     <link type="text/css" rel="stylesheet" href="assets/css/hljs-github.min.css"/>
   </head>
   <body>
-    <article class="markdown-body"><h1 id="header-header"><a class="header-link" href="#header-header"></a>header header</h1>
-<p>text text text</p>
+    <article class="markdown-body"><h1 id="cs476a-fall-2021"><a class="header-link" href="#cs476a-fall-2021"></a>CS476A, Fall 2021</h1>
+<p>Miranda Li</p>
+<p>This website will host all my homeworks for <a href="https://ccrma.stanford.edu/courses/256a/">CS476A / MUSIC256A</a>, Fall 2021.
+Here they are, in order:</p>
+<ul class="list">
+<li><a href="#">link</a></li>
+</ul>
+<p>This next bit is for me (Miranda) only just so I don&#39;t forget how to update this in the future, because I&#39;m actually writing these in Markdown and converting to HTML after the fact. Here you go Miranda here&#39;s the command you&#39;re looking for:
+<code>generate-md --layout github --input ./md --output ./cs476a_homeworks</code>
+<a href="https://github.com/mixu/markdown-styles">Here&#39;s the repo.</a></p>
     </article>
   </body>
 </html>
