--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p>This website will host all my homeworks for <a href="https://ccrma.stanford.edu/courses/256a/">CS476A / MUSIC256A</a>, Fall 2021.
 Here they are, in order:</p>
 <ul class="list">
-<li><a href="#">link</a></li>
+<li><a href="https://mirandali707.github.io/cs476a_homeworks/">Homework 1</a></li>
 </ul>
 <p>This next bit is for me (Miranda) only just so I don&#39;t forget how to update this in the future, because I&#39;m actually writing these in Markdown and converting to HTML after the fact. Here you go Miranda here&#39;s the command you&#39;re looking for:
 <code>generate-md --layout github --input ./md --output ./cs476a_homeworks</code>
