added audio visualizer ideas

--- a/cs476a_hw2.html
+++ b/cs476a_hw2.html
@@ -14,6 +14,15 @@
 <p>I found the roll a ball tutorial to be really really informative and helpful. I think it might take me a second to get used to the ways in which certain Unity GUI interface interactions are required to link the variables to the code, but with my basic knowledge of animation and callbacks from past programming things I felt really really comfortable with all the code we wrote. I&#39;m still a bit clunky navigating the scene in Unity but I know that will improve as I work.</p>
 <p>The Chunity tutorial was also straightforward and helpful, and I liked that adding sound to roll-a-ball enhanced the gameplay a lot, in my opinion. I love the chaotic, spatialized, burbling pickup object. It doesn&#39;t seem too much harder than scripting in Unity to add Chuck into Unity (though I may regret saying this later).</p>
 <p>sndpeek is funky. I had fun making stupid noises at my computer.</p>
+<h3 id="sound-visualizer-ideas"><a class="header-link" href="#sound-visualizer-ideas"></a>Sound visualizer ideas</h3>
+<ol class="list">
+<li><p>Invisible train
+Inspired by my love for public transit, I&#39;m thinking of making a subway-station-inspired sound visualizer where the time series of FFT curves form a &quot;tunnel&quot; over a train track, and the raw signal is expressed as a sign on the wall of the station that one might familiarly imagine the station name or line name / train direction to be (e.g. West 4th Street). I&#39;m not yet sure I know how to do this but I think it would be cute to have little people (or maybe just one little person, for ease of implementation) standing on the subway platform, with their earbuds in or reading, waiting for the train. When the user makes a sound, they can see it propagate through the tunnel and perturb the waveform on the subway sign.</p>
+</li>
+<li><p>Meadow
+Another idea I have is to use the sound wave as a faraway mountain range, and the multiple FFT curves as a meadow of &quot;grass&quot; -- when the FFT peaks past a threshold at a certain frequency, a flower will be triggered to bloom and remain there for a second before fading out again.</p>
+</li>
+</ol>
     </article>
   </body>
 </html>
