--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@ Here they are, in order:</p>
 <ul class="list">
 <li><a href="https://mirandali707.github.io/cs476a_homeworks/cs476a_hw1.html">Homework 1 + reading response 1</a></li>
 <li><a href="https://mirandali707.github.io/cs476a_homeworks/cs476a_hw2.html">Homework 2</a></li>
-<li><a href="https://mirandali707.github.io/cs476a_homeworks/cs476a_rr2.html">Reading response 2</a>
-This next bit is for me (Miranda) only just so I don&#39;t forget how to update this in the future, because I&#39;m actually writing these in Markdown and converting to HTML after the fact. Here you go Miranda here&#39;s the command you&#39;re looking for:
-<code>generate-md --layout github --input ./md --output ./cs476a_homeworks</code>
-<a href="https://github.com/mixu/markdown-styles">Here&#39;s the repo.</a></li>
+<li><a href="https://mirandali707.github.io/cs476a_homeworks/cs476a_rr2.html">Reading response 2</a></li>
 </ul>
+<p>This next bit is for me (Miranda) only just so I don&#39;t forget how to update this in the future, because I&#39;m actually writing these in Markdown and converting to HTML after the fact. Here you go Miranda here&#39;s the command you&#39;re looking for:
+<code>generate-md --layout github --input ./md --output ./cs476a_homeworks</code>
+<a href="https://github.com/mixu/markdown-styles">Here&#39;s the repo.</a></p>
     </article>
   </body>
 </html>
