--- a/cs476a_hw2.html
+++ b/cs476a_hw2.html
@@ -19,6 +19,12 @@
 <p>Inspired by my love for public transit, I&#39;m thinking of making a subway-station-inspired sound visualizer where the time series of FFT curves form a &quot;tunnel&quot; over a train track, and the raw signal is expressed as a sign on the wall of the station that one might familiarly imagine the station name or line name / train direction to be (e.g. West 4th Street). I&#39;m not yet sure I know how to do this but I think it would be cute to have little people (or maybe just one little person, for ease of implementation) standing on the subway platform, with their earbuds in or reading, waiting for the train. When the user makes a sound, they can see it propagate through the tunnel and perturb the waveform on the subway sign.</p>
 <h4 id="meadow"><a class="header-link" href="#meadow"></a>Meadow</h4>
 <p>Another idea I have is to use the sound wave as a faraway mountain range, and the multiple FFT curves as a meadow of &quot;grass&quot; -- when the FFT peaks past a threshold at a certain frequency, a flower will be triggered to bloom and remain there for a second before fading out again.</p>
+<h2 id="progress-update-10621"><a class="header-link" href="#progress-update-10621"></a>Progress update, 10/6/21</h2>
+<p>I decided to go with the subway station / invisible train idea. I&#39;ve since done some more detailed drawing and planning. Here&#39;s an iPad sketch / brain dump of what I&#39;ve got so far:
+<img src="img/subwaystation_brainstorm.jpg" alt="">
+Essentially, the subway signs which usually denote the stop name will have the waveform on them, and the spectrum will be represented by the subway tiles on the walls. My initial idea was to have the spectrum as a tunnel, but as it turns out, subway tunnels are more rectangular than I thought, and also I wanted to evoke the feeling of hearing the train coming and feeling the tremendous sound coming <em>at you</em> from the depths of the tunnel.</p>
+<p>I&#39;ve begun (emphasis on <strong>begun</strong>) drafting a little model of the subway station in a separate scene, which I&#39;m thinking will serve as a useful prototype just to get all the lighting and other objects done so that when I&#39;m ready to incorporate the waveform I can easily scale most things by a multiplicative factor and implement the audio responsiveness. Here&#39;s the very unimpressive thing I&#39;ve got so far:
+<img src="img/subwaystation_progress0.png" alt=""></p>
     </article>
   </body>
 </html>
