--- a/cs476a_hw2.html
+++ b/cs476a_hw2.html
@@ -25,6 +25,9 @@
 Essentially, the subway signs which usually denote the stop name will have the waveform on them, and the spectrum will be represented by the subway tiles on the walls. My initial idea was to have the spectrum as a tunnel, but as it turns out, subway tunnels are more rectangular than I thought, and also I wanted to evoke the feeling of hearing the train coming and feeling the tremendous sound coming <em>at you</em> from the depths of the tunnel.</p>
 <p>I&#39;ve begun (emphasis on <strong>begun</strong>) drafting a little model of the subway station in a separate scene, which I&#39;m thinking will serve as a useful prototype just to get all the lighting and other objects done so that when I&#39;m ready to incorporate the waveform I can easily scale most things by a multiplicative factor and implement the audio responsiveness. Here&#39;s the very unimpressive thing I&#39;ve got so far:
 <img src="img/subwaystation_progress0.png" alt=""></p>
+<h2 id="progress-update-101121"><a class="header-link" href="#progress-update-101121"></a>Progress update, 10/11/21</h2>
+<p>Here&#39;s a video of my visualizer:
+<a href="https://youtu.be/TIpXlrWhHEM">https://youtu.be/TIpXlrWhHEM</a></p>
     </article>
   </body>
 </html>
