--- a/cs476a_hw3.html
+++ b/cs476a_hw3.html
@@ -10,6 +10,9 @@
   </head>
   <body>
     <article class="markdown-body"><h1 id="roger-bevins-iii-music-sequencer"><a class="header-link" href="#roger-bevins-iii-music-sequencer"></a>Roger Bevins III: Music Sequencer</h1>
+<p><img src="img/bevinspic3.png" alt="">
+<img src="img/bevinspic2.png" alt="">
+<img src="img/bevinspic1.png" alt=""></p>
 <p>In George Saunders&#39; Lincoln in the Bardo, we follow the ghost of Abraham Lincoln&#39;s son Willie through a graveyard, where we encounter other ghosts who haunt it. One of these ghosts is Roger Bevins III. The book describes him as follows:</p>
 <p>&quot;&quot;&quot;Bevins&quot; had several sets of eyes   All darting to and fro    Several noses   All sniffing    His hands (he had multiple sets of hands, or else his hands were so quick they seemed to be many) struck this way and that, picking things up, bringing them to his face with a most inquisitive
 Little bit scary
