--- a/cs476a_final.html
+++ b/cs476a_final.html
@@ -16,6 +16,17 @@
 <p>Another idea I&#39;m interested in is combining hand-drawn animation with Chunity. I&#39;m thinking something along the lines of an infinite loop of a bunch of quirky characters dancing to a predetermined track, and when a key is pressed, at the next beat the track is changed or altered and a different set of frames is played, but the frames have been drawn so that the motion appears to be seamless, as though the whole thing is one long animated video. I hope this makes sense.</p>
 <h2 id="tour-of-my-plants"><a class="header-link" href="#tour-of-my-plants"></a>Tour of my plants</h2>
 <p>Lastly, I have an idea which involves photographing and reassembling my plants as 3D objects in unity with image textures. Each part will correspond to a noise, and the whole thing will be rigged so that touching one part of the plant influences all the others. This is inspired by me spending a lot of time staring at / playing with my plants -- I have noticed that plants are such delicate physical systems that usually perturbing one leaf will also perturn something else -- the leaf stalk, the stem, a neighboring leaf, etc. I like the idea of the audio for the corresponding pieces being distorted fittingly.</p>
+<h1 id="milestone-1"><a class="header-link" href="#milestone-1"></a>Milestone 1</h1>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9TwQsgF5AzE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+Here's my minimum working prototype. I know it looks an awful lot like my music sequencer, but in fact I did do a bit of sneaky refactoring to prepare for the next phase, in which (I hope):
+* everything will be animated
+  - the "face" blob will morph and change shape
+  - the features will pick a random direction to jostle in
+  - the hands will, upon instantiation, pick a random feature to move towards (as if bringing the object up to that feature for inspection)
+* there will be a "story mode" in which a bit of (likely handwritten) text from the book is overlaid
+* there will be ambient noise, and the samples I choose for the features will be less annoying
+
+<p>Onwards!</p>
     </article>
   </body>
 </html>
