final project milestone 2

--- a/cs476a_final.html
+++ b/cs476a_final.html
@@ -18,15 +18,23 @@
 <p>Lastly, I have an idea which involves photographing and reassembling my plants as 3D objects in unity with image textures. Each part will correspond to a noise, and the whole thing will be rigged so that touching one part of the plant influences all the others. This is inspired by me spending a lot of time staring at / playing with my plants -- I have noticed that plants are such delicate physical systems that usually perturbing one leaf will also perturn something else -- the leaf stalk, the stem, a neighboring leaf, etc. I like the idea of the audio for the corresponding pieces being distorted fittingly.</p>
 <h1 id="milestone-1"><a class="header-link" href="#milestone-1"></a>Milestone 1</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/9TwQsgF5AzE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-Here's my minimum working prototype. I know it looks an awful lot like my music sequencer, but in fact I did do a bit of sneaky refactoring to prepare for the next phase, in which (I hope):
-* everything will be animated
-  - the "face" blob will morph and change shape
-  - the features will pick a random direction to jostle in
-  - the hands will, upon instantiation, pick a random feature to move towards (as if bringing the object up to that feature for inspection)
-* there will be a "story mode" in which a bit of (likely handwritten) text from the book is overlaid
-* there will be ambient noise, and the samples I choose for the features will be less annoying
 
+<p>Here&#39;s my minimum working prototype. I know it looks an awful lot like my music sequencer, but in fact I did do a bit of sneaky refactoring to prepare for the next phase, in which (I hope):</p>
+<ul class="list">
+<li>everything will be animated<ul class="list">
+<li>the &quot;face&quot; blob will morph and change shape</li>
+<li>the features will pick a random direction to jostle in</li>
+<li>the hands will, upon instantiation, pick a random feature to move towards (as if bringing the object up to that feature for inspection)</li>
+</ul>
+</li>
+<li>there will be a &quot;story mode&quot; in which a bit of (likely handwritten) text from the book is overlaid</li>
+<li>there will be ambient noise, and the samples I choose for the features will be less annoying</li>
+</ul>
 <p>Onwards!</p>
+<h1 id="milestone-2"><a class="header-link" href="#milestone-2"></a>Milestone 2</h1>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/N5xtdt0wOAU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>Since the last milestone I&#39;ve drawn a lot of animation frames :) Now everything wiggles! spooky</p>
     </article>
   </body>
 </html>
